Pin PyTorch 1.13.1 for instant mmcv-full install

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -41,7 +41,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 2. Install Dependencies"
+                "## 2. Install Dependencies\n",
+                "\n",
+                "Pins PyTorch 1.13.1 + CUDA 11.7 for a pre-built mmcv-full wheel (instant install, no 30min compilation)."
             ]
         },
         {
@@ -50,13 +52,19 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import torch\n",
-                "torch_version = torch.__version__.split('+')[0]\n",
-                "cuda_version = torch.version.cuda.replace('.', '')\n",
-                "print(f'PyTorch: {torch_version}, CUDA: {cuda_version}')\n",
+                "# Pin PyTorch 1.13.1 for guaranteed pre-built mmcv-full wheel\n",
+                "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/torch_stable.html\n",
                 "\n",
-                "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu{cuda_version}/torch{torch_version}/index.html\n",
-                "!pip install pycocotools scikit-learn terminaltables numpy==1.26.4"
+                "# Install mmcv-full from pre-built wheel (instant, no compilation)\n",
+                "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu117/torch1.13/index.html\n",
+                "\n",
+                "# Other dependencies\n",
+                "!pip install pycocotools scikit-learn terminaltables numpy==1.26.4\n",
+                "\n",
+                "import torch\n",
+                "print(f'PyTorch: {torch.__version__}')\n",
+                "print(f'CUDA: {torch.version.cuda}')\n",
+                "print(f'CUDA available: {torch.cuda.is_available()}')"
             ]
         },
         {
