--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -30,9 +30,11 @@
             "outputs": [],
             "source": [
                 "!nvidia-smi\n",
-                "import torch\n",
+                "import torch, sys\n",
                 "print(f'PyTorch: {torch.__version__}')\n",
-                "print(f'CUDA available: {torch.cuda.is_available()}')\n",
+                "print(f'CUDA: {torch.version.cuda}')\n",
+                "print(f'Python: {sys.version}')\n",
+                "print(f'GPU available: {torch.cuda.is_available()}')\n",
                 "if torch.cuda.is_available():\n",
                 "    print(f'GPU: {torch.cuda.get_device_name(0)}')"
             ]
@@ -43,7 +45,7 @@
             "source": [
                 "## 2. Install Dependencies\n",
                 "\n",
-                "Pins PyTorch 1.13.1 + CUDA 11.7 for a pre-built mmcv-full wheel (instant install, no 30min compilation)."
+                "⏳ **Note**: `mmcv-full` must compile from source on newer Colab runtimes (~20-30 min). This is normal — the cell will show compiler output while building CUDA extensions."
             ]
         },
         {
@@ -52,19 +54,22 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Pin PyTorch 1.13.1 for guaranteed pre-built mmcv-full wheel\n",
-                "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/torch_stable.html\n",
+                "import torch\n",
+                "torch_ver = torch.__version__.split('+')[0]   # e.g. '2.9.0'\n",
+                "cuda_ver = torch.version.cuda.replace('.', '')  # e.g. '128'\n",
                 "\n",
-                "# Install mmcv-full from pre-built wheel (instant, no compilation)\n",
-                "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu117/torch1.13/index.html\n",
+                "print(f'Detected: PyTorch {torch_ver}, CUDA {cuda_ver}')\n",
+                "print(f'Installing mmcv-full 1.7.2 (may compile from source, ~20-30 min)...')\n",
+                "print('='*60)\n",
+                "\n",
+                "# Try pre-built wheel first, falls back to source compilation automatically\n",
+                "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu{cuda_ver}/torch{torch_ver}/index.html 2>&1 | tail -20\n",
                 "\n",
                 "# Other dependencies\n",
-                "!pip install pycocotools scikit-learn terminaltables numpy==1.26.4\n",
+                "!pip install pycocotools scikit-learn terminaltables\n",
                 "\n",
-                "import torch\n",
-                "print(f'PyTorch: {torch.__version__}')\n",
-                "print(f'CUDA: {torch.version.cuda}')\n",
-                "print(f'CUDA available: {torch.cuda.is_available()}')"
+                "import mmcv\n",
+                "print(f'\\n✅ mmcv-full {mmcv.__version__} installed successfully!')"
             ]
         },
         {
@@ -136,7 +141,7 @@
                 "init_file = 'mmdetection/mmdet/__init__.py'\n",
                 "with open(init_file, 'r') as f:\n",
                 "    content = f.read()\n",
-                "content = re.sub(r\"mmcv_maximum_version\\s*=\\s*'[^']*'\", \"mmcv_maximum_version = '2.1.0'\", content)\n",
+                "content = re.sub(r\"mmcv_maximum_version\\s*=\\s*'[^']*'\", \"mmcv_maximum_version = '3.0.0'\", content)\n",
                 "with open(init_file, 'w') as f:\n",
                 "    f.write(content)\n",
                 "print('[Fix 1] mmcv version cap updated.')\n",
@@ -335,7 +340,7 @@
             "source": [
                 "### 7b. Create 10% COCO Subset (Optional)\n",
                 "\n",
-                "Use a smaller subset of COCO for faster training iterations. Set `USE_SUBSET = False` for full COCO training."
+                "Set `USE_SUBSET = False` for full COCO training."
             ]
         },
         {
@@ -363,11 +368,9 @@
                 "    all_images = coco_data['images']\n",
                 "    num_subset = int(len(all_images) * SUBSET_RATIO)\n",
                 "\n",
-                "    random.seed(42)  # reproducible\n",
+                "    random.seed(42)\n",
                 "    subset_images = random.sample(all_images, num_subset)\n",
                 "    subset_img_ids = set(img['id'] for img in subset_images)\n",
-                "\n",
-                "    # Filter annotations to only include subset images\n",
                 "    subset_annotations = [ann for ann in coco_data['annotations'] if ann['image_id'] in subset_img_ids]\n",
                 "\n",
                 "    subset_data = {\n",
@@ -381,12 +384,9 @@
                 "    with open(subset_path, 'w') as f:\n",
                 "        json.dump(subset_data, f)\n",
                 "\n",
-                "    print(f'\\n✅ Created {SUBSET_RATIO*100:.0f}% subset:')\n",
-                "    print(f'   Images: {len(subset_images):,} / {len(all_images):,}')\n",
-                "    print(f'   Annotations: {len(subset_annotations):,} / {len(coco_data[\"annotations\"]):,}')\n",
-                "    print(f'   Saved to: {subset_path}')\n",
+                "    print(f'✅ Created {SUBSET_RATIO*100:.0f}% subset: {len(subset_images):,} images, {len(subset_annotations):,} annotations')\n",
                 "else:\n",
-                "    print('Using full COCO dataset for training.')"
+                "    print('Using full COCO dataset.')"
             ]
         },
         {
@@ -426,7 +426,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Create symlink for JPEGImages (annotations reference ./JPEGImages/xxx.JPG)\n",
                 "os.chdir(REPO_DIR)\n",
                 "jpeg_link = 'data/eallis/JPEGImages'\n",
                 "if not os.path.exists(jpeg_link):\n",
@@ -455,22 +454,18 @@
                 "with open(CONFIG_FILE, 'r') as f:\n",
                 "    config_content = f.read()\n",
                 "\n",
-                "# Reduce batch size for Colab GPU (T4 = 16GB)\n",
                 "config_content = config_content.replace('BATCHSIZE = 8', 'BATCHSIZE = 4')\n",
                 "\n",
-                "# Train from scratch (pretrained backbone only)\n",
                 "config_content = re.sub(\n",
                 "    r\"load_from\\s*=\\s*'[^']*'\",\n",
                 "    \"load_from = None\",\n",
                 "    config_content)\n",
                 "\n",
-                "# If using COCO subset, point to the subset annotation file\n",
                 "if USE_SUBSET:\n",
                 "    config_content = config_content.replace(\n",
                 "        \"ann_file='data/coco/annotations/instances_train2017.json'\",\n",
                 "        \"ann_file='data/coco/annotations/instances_train2017_subset.json'\")\n",
                 "\n",
-                "# Set Google Drive save directory for auto-save\n",
                 "DRIVE_SAVE_DIR = '/content/drive/MyDrive/EALLIS_checkpoints'\n",
                 "\n",
                 "TRAIN_CONFIG = 'Configs/train_colab.py'\n",
@@ -478,11 +473,9 @@
                 "    f.write(config_content)\n",
                 "\n",
                 "subset_label = f'{SUBSET_RATIO*100:.0f}% subset' if USE_SUBSET else 'full'\n",
-                "print(f'Training config saved to: {TRAIN_CONFIG}')\n",
-                "print(f'  - Train: COCO train2017 ({subset_label}) → SynCOCO via AddNoisyImg')\n",
-                "print(f'  - Val/Test: EALLIS test set')\n",
-                "print(f'  - Batch size: 4, Epochs: 12')\n",
-                "print(f'  - Auto-save to: {DRIVE_SAVE_DIR}')"
+                "print(f'Config saved: {TRAIN_CONFIG}')\n",
+                "print(f'  Train: COCO ({subset_label}) → SynCOCO | Val/Test: EALLIS | Batch: 4 | Epochs: 12')\n",
+                "print(f'  Auto-save to: {DRIVE_SAVE_DIR}')"
             ]
         },
         {
@@ -532,39 +525,31 @@
                 "\n",
                 "    def after_train_epoch(self, runner):\n",
                 "        epoch = runner.epoch + 1\n",
-                "        # Copy the checkpoint that was just saved\n",
                 "        ckpt_name = f'epoch_{epoch}.pth'\n",
                 "        src = os.path.join(runner.work_dir, ckpt_name)\n",
                 "        if os.path.exists(src):\n",
                 "            dst = os.path.join(self.drive_dir, ckpt_name)\n",
                 "            shutil.copy2(src, dst)\n",
                 "            runner.logger.info(f'💾 Saved {ckpt_name} to Google Drive')\n",
-                "        # Also copy latest log\n",
                 "        for log_file in glob.glob(os.path.join(runner.work_dir, '*.log')):\n",
                 "            shutil.copy2(log_file, os.path.join(self.drive_dir, os.path.basename(log_file)))\n",
                 "\n",
-                "# Load config\n",
                 "cfg = Config.fromfile('Configs/train_colab.py')\n",
                 "\n",
-                "# Register the auto-save hook\n",
                 "cfg.custom_hooks = cfg.get('custom_hooks', [])\n",
                 "cfg.custom_hooks.append(dict(type='DriveBackupHook', drive_dir=DRIVE_SAVE_DIR, priority='LOW'))\n",
                 "\n",
-                "# Build datasets\n",
                 "print('Building datasets...')\n",
                 "datasets = [build_dataset(cfg.data.train)]\n",
                 "print(f'Train dataset: {len(datasets[0])} images')\n",
                 "\n",
-                "# Build model\n",
                 "print('Building model...')\n",
                 "model = build_detector(cfg.model)\n",
                 "model.init_weights()\n",
                 "model.CLASSES = datasets[0].CLASSES\n",
                 "\n",
-                "print(f'Model: {cfg.model.type}')\n",
-                "print(f'Backbone: {cfg.model.backbone.type}')\n",
-                "print(f'Training for {cfg.runner.max_epochs} epochs...')\n",
-                "print(f'Auto-saving checkpoints to: {DRIVE_SAVE_DIR}')\n",
+                "print(f'Model: {cfg.model.type} | Backbone: {cfg.model.backbone.type}')\n",
+                "print(f'Training for {cfg.runner.max_epochs} epochs | Auto-saving to: {DRIVE_SAVE_DIR}')\n",
                 "\n",
                 "train_detector(model, datasets, cfg, distributed=False, validate=True, meta=dict())\n",
                 "\n",
