Fix Python 3.12: remove import imp, tokenize, numpy.core.fromnumeric

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -55,17 +55,15 @@
             "outputs": [],
             "source": [
                 "import torch\n",
-                "torch_ver = torch.__version__.split('+')[0]   # e.g. '2.9.0'\n",
-                "cuda_ver = torch.version.cuda.replace('.', '')  # e.g. '128'\n",
+                "torch_ver = torch.__version__.split('+')[0]\n",
+                "cuda_ver = torch.version.cuda.replace('.', '')\n",
                 "\n",
                 "print(f'Detected: PyTorch {torch_ver}, CUDA {cuda_ver}')\n",
                 "print(f'Installing mmcv-full 1.7.2 (may compile from source, ~20-30 min)...')\n",
                 "print('='*60)\n",
                 "\n",
-                "# Try pre-built wheel first, falls back to source compilation automatically\n",
                 "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu{cuda_ver}/torch{torch_ver}/index.html 2>&1 | tail -20\n",
                 "\n",
-                "# Other dependencies\n",
                 "!pip install pycocotools scikit-learn terminaltables\n",
                 "\n",
                 "import mmcv\n",
@@ -111,9 +109,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "import sys\n",
                 "os.chdir(os.path.join(REPO_DIR, 'mmdetection'))\n",
                 "!pip install -e . --no-deps\n",
                 "os.chdir(REPO_DIR)\n",
+                "\n",
+                "# Add to Python path explicitly\n",
+                "sys.path.insert(0, os.path.join(REPO_DIR, 'mmdetection'))\n",
                 "\n",
                 "import mmdet\n",
                 "print(f'mmdet version: {mmdet.__version__}')"
@@ -123,7 +125,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 5. Apply All Fixes"
+                "## 5. Apply All Fixes\n",
+                "\n",
+                "Fixes compatibility issues with Python 3.12, mmcv 1.7.2, and the custom modules."
             ]
         },
         {
@@ -146,7 +150,7 @@
                 "    f.write(content)\n",
                 "print('[Fix 1] mmcv version cap updated.')\n",
                 "\n",
-                "# Fix 2: Comment out deprecated imports\n",
+                "# Fix 2: Comment out deprecated/removed imports (Python 3.12 compatibility)\n",
                 "for resnet_file in [\n",
                 "    'mmdetection/mmdet/models/backbones/resnet.py',\n",
                 "    'mmdetection_custom_part/mmdet/models/backbones/resnet.py'\n",
@@ -154,12 +158,17 @@
                 "    if os.path.exists(resnet_file):\n",
                 "        with open(resnet_file, 'r') as f:\n",
                 "            content = f.read()\n",
+                "        # Python 3.12: imp module removed\n",
+                "        content = content.replace('import imp', '# import imp  # removed in Python 3.12')\n",
+                "        # Python 3.12: deprecated/unused imports\n",
                 "        content = content.replace('from os import pread', '# from os import pread')\n",
+                "        content = content.replace('from tokenize import group', '# from tokenize import group')\n",
+                "        content = content.replace('from numpy.core.fromnumeric import size', '# from numpy.core.fromnumeric import size')\n",
                 "        content = content.replace('from torch.functional import _index_tensor_with_indices_list',\n",
                 "                                  '# from torch.functional import _index_tensor_with_indices_list')\n",
                 "        with open(resnet_file, 'w') as f:\n",
                 "            f.write(content)\n",
-                "print('[Fix 2] Deprecated imports commented out.')\n",
+                "print('[Fix 2] Python 3.12 deprecated imports fixed.')\n",
                 "\n",
                 "# Fix 3: Fix relative imports\n",
                 "import_fixes = [\n",
@@ -515,7 +524,6 @@
                 "from mmdet.models import build_detector\n",
                 "from mmdet.apis import train_detector\n",
                 "\n",
-                "# ---- Custom hook: auto-save checkpoints to Google Drive after every epoch ----\n",
                 "@HOOKS.register_module(force=True)\n",
                 "class DriveBackupHook(Hook):\n",
                 "    \"\"\"Copies checkpoint files to Google Drive after each epoch.\"\"\"\n",
