Add pretrainedmodels dependency for cbam.py

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -64,7 +64,8 @@
                 "\n",
                 "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu{cuda_ver}/torch{torch_ver}/index.html 2>&1 | tail -20\n",
                 "\n",
-                "!pip install pycocotools scikit-learn terminaltables\n",
+                "# All other dependencies\n",
+                "!pip install pycocotools scikit-learn terminaltables pretrainedmodels\n",
                 "\n",
                 "import mmcv\n",
                 "print(f'\\n✅ mmcv-full {mmcv.__version__} installed successfully!')"
@@ -114,7 +115,6 @@
                 "!pip install -e . --no-deps\n",
                 "os.chdir(REPO_DIR)\n",
                 "\n",
-                "# Add to Python path explicitly\n",
                 "sys.path.insert(0, os.path.join(REPO_DIR, 'mmdetection'))\n",
                 "\n",
                 "import mmdet\n",
@@ -158,9 +158,7 @@
                 "    if os.path.exists(resnet_file):\n",
                 "        with open(resnet_file, 'r') as f:\n",
                 "            content = f.read()\n",
-                "        # Python 3.12: imp module removed\n",
                 "        content = content.replace('import imp', '# import imp  # removed in Python 3.12')\n",
-                "        # Python 3.12: deprecated/unused imports\n",
                 "        content = content.replace('from os import pread', '# from os import pread')\n",
                 "        content = content.replace('from tokenize import group', '# from tokenize import group')\n",
                 "        content = content.replace('from numpy.core.fromnumeric import size', '# from numpy.core.fromnumeric import size')\n",
