Cache mmcv-full wheel on Drive for instant future installs

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -20,7 +20,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 1. Check GPU & Environment"
+                "## 1. Mount Google Drive & Check GPU"
             ]
         },
         {
@@ -29,6 +29,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "from google.colab import drive\n",
+                "drive.mount('/content/drive')\n",
+                "\n",
                 "!nvidia-smi\n",
                 "import torch, sys\n",
                 "print(f'PyTorch: {torch.__version__}')\n",
@@ -45,7 +48,7 @@
             "source": [
                 "## 2. Install Dependencies\n",
                 "\n",
-                "⏳ **Note**: `mmcv-full` must compile from source on newer Colab runtimes (~20-30 min). This is normal — the cell will show compiler output while building CUDA extensions."
+                "This cell caches the compiled mmcv-full on Google Drive. First run takes ~20-30 min, but subsequent sessions install in **~30 seconds** from the cached wheel."
             ]
         },
         {
@@ -54,21 +57,59 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "import os, glob, time\n",
                 "import torch\n",
+                "\n",
                 "torch_ver = torch.__version__.split('+')[0]\n",
                 "cuda_ver = torch.version.cuda.replace('.', '')\n",
+                "py_ver = f'{sys.version_info.major}{sys.version_info.minor}'\n",
                 "\n",
-                "print(f'Detected: PyTorch {torch_ver}, CUDA {cuda_ver}')\n",
-                "print(f'Installing mmcv-full 1.7.2 (may compile from source, ~20-30 min)...')\n",
-                "print('='*60)\n",
+                "# Cache directory on Google Drive\n",
+                "CACHE_DIR = '/content/drive/MyDrive/EALLIS_pip_cache'\n",
+                "os.makedirs(CACHE_DIR, exist_ok=True)\n",
                 "\n",
-                "!pip install mmcv-full==1.7.2 -f https://download.openmmlab.com/mmcv/dist/cu{cuda_ver}/torch{torch_ver}/index.html 2>&1 | tail -20\n",
+                "# Check if mmcv is already installed\n",
+                "try:\n",
+                "    import mmcv\n",
+                "    print(f'✅ mmcv-full {mmcv.__version__} already installed! Skipping.')\n",
+                "except ImportError:\n",
+                "    # Check for cached wheel on Drive\n",
+                "    cached_wheels = glob.glob(os.path.join(CACHE_DIR, 'mmcv_full-1.7.2*.whl'))\n",
+                "    \n",
+                "    if cached_wheels:\n",
+                "        print(f'📦 Found cached wheel on Drive, installing (~30 sec)...')\n",
+                "        wheel_path = cached_wheels[0]\n",
+                "        os.system(f'pip install {wheel_path}')\n",
+                "    else:\n",
+                "        print(f'⏳ No cached wheel found. Compiling mmcv-full from source (~20-30 min)...')\n",
+                "        print(f'   PyTorch {torch_ver}, CUDA {cuda_ver}, Python {py_ver}')\n",
+                "        print('='*60)\n",
+                "        \n",
+                "        # Build a wheel so we can cache it\n",
+                "        os.system(f'pip wheel mmcv-full==1.7.2 -w /tmp/mmcv_wheels '\n",
+                "                  f'-f https://download.openmmlab.com/mmcv/dist/cu{cuda_ver}/torch{torch_ver}/index.html '\n",
+                "                  f'2>&1 | tail -5')\n",
+                "        \n",
+                "        # Install the built wheel\n",
+                "        built_wheels = glob.glob('/tmp/mmcv_wheels/mmcv_full-1.7.2*.whl')\n",
+                "        if built_wheels:\n",
+                "            wheel_path = built_wheels[0]\n",
+                "            os.system(f'pip install {wheel_path}')\n",
+                "            # Cache to Drive for next time\n",
+                "            import shutil\n",
+                "            shutil.copy2(wheel_path, CACHE_DIR)\n",
+                "            print(f'\\n💾 Cached wheel to Drive for future sessions!')\n",
+                "        else:\n",
+                "            # Fallback: direct pip install\n",
+                "            os.system(f'pip install mmcv-full==1.7.2 '\n",
+                "                      f'-f https://download.openmmlab.com/mmcv/dist/cu{cuda_ver}/torch{torch_ver}/index.html')\n",
+                "    \n",
+                "    import mmcv\n",
+                "    print(f'\\n✅ mmcv-full {mmcv.__version__} installed!')\n",
                 "\n",
-                "# All other dependencies\n",
-                "!pip install pycocotools scikit-learn terminaltables pretrainedmodels\n",
-                "\n",
-                "import mmcv\n",
-                "print(f'\\n✅ mmcv-full {mmcv.__version__} installed successfully!')"
+                "# Other dependencies (fast)\n",
+                "!pip install -q pycocotools scikit-learn terminaltables pretrainedmodels\n",
+                "print('✅ All dependencies ready!')"
             ]
         },
         {
@@ -409,9 +450,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from google.colab import drive\n",
-                "drive.mount('/content/drive')\n",
-                "\n",
                 "EALLIS_DRIVE_PATH = '/content/drive/MyDrive/datasets/eallis'\n",
                 "\n",
                 "if os.path.exists(EALLIS_DRIVE_PATH):\n",
