Fix __init__.py class names + comprehensive deprecated import scanner

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -57,7 +57,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import os, glob, time\n",
+                "import os, glob, sys, time\n",
                 "import torch\n",
                 "\n",
                 "torch_ver = torch.__version__.split('+')[0]\n",
@@ -132,7 +132,8 @@
                 "if not os.path.exists(REPO_DIR):\n",
                 "    !git clone https://github.com/itzaqeel/EALLIS.git {REPO_DIR}\n",
                 "else:\n",
-                "    print(f'{REPO_DIR} already exists, skipping clone.')\n",
+                "    print(f'{REPO_DIR} already exists, pulling latest...')\n",
+                "    !cd {REPO_DIR} && git pull\n",
                 "\n",
                 "os.chdir(REPO_DIR)\n",
                 "print(f'Working directory: {os.getcwd()}')"
@@ -168,7 +169,7 @@
             "source": [
                 "## 5. Apply All Fixes\n",
                 "\n",
-                "Fixes compatibility issues with Python 3.12, mmcv 1.7.2, and the custom modules."
+                "Fixes compatibility issues with Python 3.12, NumPy 2.x, mmcv 1.7.2, and the custom modules."
             ]
         },
         {
@@ -191,25 +192,35 @@
                 "    f.write(content)\n",
                 "print('[Fix 1] mmcv version cap updated.')\n",
                 "\n",
-                "# Fix 2: Comment out deprecated/removed imports (Python 3.12 compatibility)\n",
-                "for resnet_file in [\n",
-                "    'mmdetection/mmdet/models/backbones/resnet.py',\n",
-                "    'mmdetection_custom_part/mmdet/models/backbones/resnet.py'\n",
-                "]:\n",
-                "    if os.path.exists(resnet_file):\n",
-                "        with open(resnet_file, 'r') as f:\n",
-                "            content = f.read()\n",
-                "        content = content.replace('import imp', '# import imp  # removed in Python 3.12')\n",
-                "        content = content.replace('from os import pread', '# from os import pread')\n",
-                "        content = content.replace('from tokenize import group', '# from tokenize import group')\n",
-                "        content = content.replace('from numpy.core.fromnumeric import size', '# from numpy.core.fromnumeric import size')\n",
-                "        content = content.replace('from torch.functional import _index_tensor_with_indices_list',\n",
-                "                                  '# from torch.functional import _index_tensor_with_indices_list')\n",
-                "        with open(resnet_file, 'w') as f:\n",
-                "            f.write(content)\n",
-                "print('[Fix 2] Python 3.12 deprecated imports fixed.')\n",
+                "# Fix 2: Comment out deprecated/removed imports (Python 3.12 + NumPy 2.x)\n",
+                "deprecated_imports = {\n",
+                "    'import imp': '# import imp  # removed in Python 3.12',\n",
+                "    'from os import pread': '# from os import pread',\n",
+                "    'from tokenize import group': '# from tokenize import group',\n",
+                "    'from numpy.core.fromnumeric import size': '# from numpy.core.fromnumeric import size',\n",
+                "    'from numpy.core.numeric import outer': '# from numpy.core.numeric import outer',\n",
+                "    'from numpy.lib.npyio import load': '# from numpy.lib.npyio import load',\n",
+                "    'from numpy.lib.arraypad import pad': 'from numpy import pad',\n",
+                "    'from numpy.lib.type_check import common_type': 'from numpy import common_type',\n",
+                "    'from torch.functional import _index_tensor_with_indices_list': '# from torch.functional import _index_tensor_with_indices_list',\n",
+                "}\n",
+                "fix2_files = glob.glob('mmdetection/**/*.py', recursive=True) + \\\n",
+                "             glob.glob('mmdetection_custom_part/**/*.py', recursive=True) + \\\n",
+                "             glob.glob('utils/**/*.py', recursive=True)\n",
+                "fix2_count = 0\n",
+                "for py_file in fix2_files:\n",
+                "    with open(py_file, 'r') as f:\n",
+                "        content = f.read()\n",
+                "    new_content = content\n",
+                "    for old_imp, new_imp in deprecated_imports.items():\n",
+                "        new_content = new_content.replace(old_imp, new_imp)\n",
+                "    if new_content != content:\n",
+                "        with open(py_file, 'w') as f:\n",
+                "            f.write(new_content)\n",
+                "        fix2_count += 1\n",
+                "print(f'[Fix 2] Fixed deprecated imports in {fix2_count} files.')\n",
                 "\n",
-                "# Fix 3: Fix relative imports\n",
+                "# Fix 3: Fix relative imports in custom_part\n",
                 "import_fixes = [\n",
                 "    ('mmdetection_custom_part/mmdet/models/backbones/resnet.py', 'from ..utils', 'from mmdet.models.utils'),\n",
                 "    ('mmdetection_custom_part/mmdet/models/backbones/resnet.py', 'from .cbam', 'from mmdet.models.backbones.cbam'),\n",
@@ -262,14 +273,15 @@
                 "        count += 1\n",
                 "print(f'[Fix 5] Forced registration in {count} files.')\n",
                 "\n",
-                "# Fix 6: Rewrite __init__.py files\n",
+                "# Fix 6: Rewrite __init__.py files with correct class names\n",
                 "with open('mmdetection_custom_part/mmdet/models/backbones/__init__.py', 'w') as f:\n",
                 "    f.write(\"\"\"from .resnet import ResNet, ResNetV1d, ResNetAdaD, ResNetAdaDSmoothPrior\n",
                 "from .resnext import ResNeXt\n",
-                "from .swin import SwinTransformer, SwinTransformerV2\n",
-                "from .convnext import ConvNeXt\n",
-                "__all__ = ['ResNet', 'ResNetV1d', 'ResNeXt', 'SwinTransformer', 'SwinTransformerV2',\n",
-                "           'ConvNeXt', 'ResNetAdaD', 'ResNetAdaDSmoothPrior']\n",
+                "from .swin import SwinTransformer, SwinTransformerAdaD\n",
+                "from .convnext import ConvNeXt, ConvNeXtAdaD\n",
+                "__all__ = ['ResNet', 'ResNetV1d', 'ResNetAdaD', 'ResNetAdaDSmoothPrior',\n",
+                "           'ResNeXt', 'SwinTransformer', 'SwinTransformerAdaD',\n",
+                "           'ConvNeXt', 'ConvNeXtAdaD']\n",
                 "\"\"\")\n",
                 "with open('mmdetection_custom_part/mmdet/models/dense_heads/__init__.py', 'w') as f:\n",
                 "    f.write(\"\"\"from .maskformer_head import MaskFormerHead\n",
