Update notebook: COCO from Drive zip, fix chdir for fresh runtime

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -126,14 +126,15 @@
             "outputs": [],
             "source": [
                 "import os\n",
+                "os.chdir('/content')\n",
                 "\n",
                 "REPO_DIR = '/content/EALLIS'\n",
                 "\n",
                 "if not os.path.exists(REPO_DIR):\n",
                 "    !git clone https://github.com/itzaqeel/EALLIS.git {REPO_DIR}\n",
                 "else:\n",
-                "    print(f'{REPO_DIR} already exists, pulling latest...')\n",
-                "    !cd {REPO_DIR} && git pull\n",
+                "    os.chdir(REPO_DIR)\n",
+                "    !git pull\n",
                 "\n",
                 "os.chdir(REPO_DIR)\n",
                 "print(f'Working directory: {os.getcwd()}')"
@@ -366,7 +367,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 7a. Download COCO"
+                "### 7a. Load COCO from Google Drive\n",
+                "\n",
+                "Upload `coco.zip` to `MyDrive/datasets/coco.zip`. The zip contains a `coco2017/` folder with `annotations/`, `train2017/`, `val2017/`, `test2017/`."
             ]
         },
         {
@@ -375,23 +378,28 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "DOWNLOAD_COCO = True  # Set False if using Drive symlinks\n",
+                "import os\n",
+                "os.chdir(REPO_DIR)\n",
                 "\n",
-                "if DOWNLOAD_COCO:\n",
-                "    os.chdir(os.path.join(REPO_DIR, 'data/coco'))\n",
-                "    !wget -q http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
-                "    !unzip -qo annotations_trainval2017.zip\n",
-                "    !rm annotations_trainval2017.zip\n",
-                "    !wget -q http://images.cocodataset.org/zips/train2017.zip\n",
-                "    !unzip -qo train2017.zip\n",
-                "    !rm train2017.zip\n",
-                "    os.chdir(REPO_DIR)\n",
-                "    print(f'COCO train images: {len(os.listdir(\"data/coco/train2017\"))}')\n",
+                "COCO_ZIP = '/content/drive/MyDrive/datasets/coco.zip'\n",
+                "\n",
+                "if os.path.exists(COCO_ZIP):\n",
+                "    print(f'Found {COCO_ZIP}, unzipping (~5-10 min)...')\n",
+                "    !unzip -qo {COCO_ZIP} -d /tmp/coco_unzip/\n",
+                "    \n",
+                "    # Copy needed folders (coco.zip has coco2017/ subfolder inside)\n",
+                "    !cp -r /tmp/coco_unzip/coco2017/annotations/* data/coco/annotations/\n",
+                "    !cp -r /tmp/coco_unzip/coco2017/train2017/* data/coco/train2017/\n",
+                "    \n",
+                "    # Clean up temp files to save disk space\n",
+                "    !rm -rf /tmp/coco_unzip\n",
+                "    \n",
+                "    print(f'✅ COCO train images: {len(os.listdir(\"data/coco/train2017\"))}')\n",
+                "    print(f'   Annotations: {os.listdir(\"data/coco/annotations\")}')\n",
                 "else:\n",
-                "    print('Skipping COCO download.')\n",
-                "    # Uncomment to symlink from Drive:\n",
-                "    # !ln -sf /content/drive/MyDrive/datasets/coco/train2017 data/coco/train2017\n",
-                "    # !ln -sf /content/drive/MyDrive/datasets/coco/annotations data/coco/annotations"
+                "    print(f'❌ COCO zip not found at {COCO_ZIP}')\n",
+                "    print(f'   Upload coco.zip to Google Drive at: MyDrive/datasets/coco.zip')\n",
+                "    print(f'   Or change COCO_ZIP path above to match your Drive location.')"
             ]
         },
         {
