Save best model only + Fix 7 NoiseModel path + deprecated numpy.testing import

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -204,6 +204,7 @@
                 "    'from numpy.lib.arraypad import pad': 'from numpy import pad',\n",
                 "    'from numpy.lib.type_check import common_type': 'from numpy import common_type',\n",
                 "    'from torch.functional import _index_tensor_with_indices_list': '# from torch.functional import _index_tensor_with_indices_list',\n",
+                "    'from numpy.testing._private.utils import print_assert_equal': '# from numpy.testing._private.utils import print_assert_equal',\n",
                 "}\n",
                 "fix2_files = glob.glob('mmdetection/**/*.py', recursive=True) + \\\n",
                 "             glob.glob('mmdetection_custom_part/**/*.py', recursive=True) + \\\n",
@@ -307,6 +308,29 @@
                 "    with open(models_init, 'w') as f:\n",
                 "        f.write(content)\n",
                 "print('[Fix 6] __init__.py files rewritten.')\n",
+                "\n",
+                "# Fix 7: Fix hardcoded NoiseModel camera_params path\n",
+                "noise_file = 'mmdetection/mmdet/datasets/pipelines/noisemodel/dark_noising.py'\n",
+                "with open(noise_file, 'r') as f:\n",
+                "    content = f.read()\n",
+                "if '~/code/mmdetection' in content:\n",
+                "    if 'import os\\n' not in content:\n",
+                "        content = content.replace('import os.path as osp', 'import os\\nimport os.path as osp')\n",
+                "    content = content.replace(\n",
+                "        \"\"\"        if param_dir is None:\n",
+                "            try:\n",
+                "                self.param_dir = '~/code/mmdetection/mmdet/datasets/pipelines/noisemodel/camera_params'\n",
+                "            except:\n",
+                "                print('please specify the location of camera parameters, e.g., ~/code/mmdetection/mmdet/datasets/pipelines/noisemodel/camera_params')\n",
+                "                raise Exception\"\"\",\n",
+                "        \"\"\"        if param_dir is None:\n",
+                "            self.param_dir = os.path.join(os.path.dirname(__file__), 'camera_params')\"\"\")\n",
+                "    with open(noise_file, 'w') as f:\n",
+                "        f.write(content)\n",
+                "    print('[Fix 7] NoiseModel camera_params path fixed.')\n",
+                "else:\n",
+                "    print('[Fix 7] NoiseModel path already fixed.')\n",
+                "\n",
                 "print('\\n✅ All fixes applied!')"
             ]
         },
@@ -540,7 +564,7 @@
                 "subset_label = f'{SUBSET_RATIO*100:.0f}% subset' if USE_SUBSET else 'full'\n",
                 "print(f'Config saved: {TRAIN_CONFIG}')\n",
                 "print(f'  Train: COCO ({subset_label}) → SynCOCO | Val/Test: EALLIS | Batch: 4 | Epochs: 12')\n",
-                "print(f'  Auto-save to: {DRIVE_SAVE_DIR}')"
+                "print(f'  Saves only the BEST model (by bbox_mAP) to: {DRIVE_SAVE_DIR}')"
             ]
         },
         {
@@ -549,7 +573,7 @@
             "source": [
                 "## 9. Start Training 🚀\n",
                 "\n",
-                "Checkpoints are **automatically saved to Google Drive** after every epoch."
+                "Only the **best checkpoint** (by bbox mAP) is saved to Google Drive. No disk wasted on worse models."
             ]
         },
         {
@@ -582,20 +606,23 @@
                 "\n",
                 "@HOOKS.register_module(force=True)\n",
                 "class DriveBackupHook(Hook):\n",
-                "    \"\"\"Copies checkpoint files to Google Drive after each epoch.\"\"\"\n",
+                "    \"\"\"Backs up the best checkpoint to Google Drive.\"\"\"\n",
                 "    def __init__(self, drive_dir):\n",
                 "        self.drive_dir = drive_dir\n",
                 "        os.makedirs(drive_dir, exist_ok=True)\n",
                 "\n",
                 "    def after_train_epoch(self, runner):\n",
-                "        epoch = runner.epoch + 1\n",
-                "        ckpt_name = f'epoch_{epoch}.pth'\n",
-                "        src = os.path.join(runner.work_dir, ckpt_name)\n",
-                "        if os.path.exists(src):\n",
-                "            dst = os.path.join(self.drive_dir, ckpt_name)\n",
+                "        # Copy best model if it exists\n",
+                "        best_ckpt = os.path.join(runner.work_dir, 'best_bbox_mAP_epoch_*.pth')\n",
+                "        import glob as _glob\n",
+                "        best_files = _glob.glob(best_ckpt)\n",
+                "        if best_files:\n",
+                "            src = best_files[-1]\n",
+                "            dst = os.path.join(self.drive_dir, 'best_model.pth')\n",
                 "            shutil.copy2(src, dst)\n",
-                "            runner.logger.info(f'💾 Saved {ckpt_name} to Google Drive')\n",
-                "        for log_file in glob.glob(os.path.join(runner.work_dir, '*.log')):\n",
+                "            runner.logger.info(f'💾 Best model saved to Google Drive')\n",
+                "        # Also copy training log\n",
+                "        for log_file in _glob.glob(os.path.join(runner.work_dir, '*.log')):\n",
                 "            shutil.copy2(log_file, os.path.join(self.drive_dir, os.path.basename(log_file)))\n",
                 "\n",
                 "cfg = Config.fromfile('Configs/train_colab.py')\n",
@@ -613,7 +640,7 @@
                 "model.CLASSES = datasets[0].CLASSES\n",
                 "\n",
                 "print(f'Model: {cfg.model.type} | Backbone: {cfg.model.backbone.type}')\n",
-                "print(f'Training for {cfg.runner.max_epochs} epochs | Auto-saving to: {DRIVE_SAVE_DIR}')\n",
+                "print(f'Training for {cfg.runner.max_epochs} epochs | Best model saved to: {DRIVE_SAVE_DIR}')\n",
                 "\n",
                 "train_detector(model, datasets, cfg, distributed=False, validate=True, meta=dict())\n",
                 "\n",
@@ -640,9 +667,14 @@
                 "from mmdet.datasets import build_dataloader\n",
                 "from mmdet.apis import single_gpu_test\n",
                 "\n",
+                "# Use the best checkpoint\n",
                 "import glob\n",
-                "ckpt_files = sorted(glob.glob(os.path.join(cfg.work_dir, 'epoch_*.pth')))\n",
-                "latest_ckpt = ckpt_files[-1] if ckpt_files else os.path.join(cfg.work_dir, 'latest.pth')\n",
+                "best_ckpts = sorted(glob.glob(os.path.join(cfg.work_dir, 'best_*.pth')))\n",
+                "if best_ckpts:\n",
+                "    latest_ckpt = best_ckpts[-1]\n",
+                "else:\n",
+                "    ckpt_files = sorted(glob.glob(os.path.join(cfg.work_dir, 'epoch_*.pth')))\n",
+                "    latest_ckpt = ckpt_files[-1] if ckpt_files else os.path.join(cfg.work_dir, 'latest.pth')\n",
                 "print(f'Using checkpoint: {latest_ckpt}')\n",
                 "\n",
                 "test_dataset = build_dataset(cfg.data.test)\n",
@@ -680,7 +712,7 @@
                 "- **Full COCO**: Set `USE_SUBSET = False` in cell 7b\n",
                 "- **Resume training**: Set `resume_from = 'work_dir/epoch_X.pth'` in config\n",
                 "- **Fine-tune from pretrained**: Set `load_from = 'Checkpoints/Checkpoint1.pth'`\n",
-                "- Checkpoints are auto-saved to Google Drive after every epoch — no data loss on Colab timeout!"
+                "- Only the best model (by bbox mAP) is saved to Google Drive — no wasted disk space!"
             ]
         }
     ],
