COCO: extract to Drive once, symlink on future runs - fixes disk space issue

--- a/notebooks/EALLIS_Training_Colab.ipynb
+++ b/notebooks/EALLIS_Training_Colab.ipynb
@@ -391,9 +391,11 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 7a. Load COCO from Google Drive\n",
+                "### 7a. Extract COCO to Google Drive (one-time)\n",
                 "\n",
-                "Upload `coco.zip` to `MyDrive/datasets/coco.zip`. The zip contains a `coco2017/` folder with `annotations/`, `train2017/`, `val2017/`, `test2017/`."
+                "Extracts `coco.zip` to `MyDrive/datasets/coco2017/` on Google Drive. Only runs once — subsequent sessions skip extraction and just symlink.\n",
+                "\n",
+                "**First run**: ~15-20 min to extract. **All future runs**: instant (symlink only)."
             ]
         },
         {
@@ -402,28 +404,55 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import os\n",
+                "import os, time\n",
                 "os.chdir(REPO_DIR)\n",
                 "\n",
                 "COCO_ZIP = '/content/drive/MyDrive/datasets/coco.zip'\n",
+                "COCO_DRIVE_DIR = '/content/drive/MyDrive/datasets/coco2017'\n",
                 "\n",
-                "if os.path.exists(COCO_ZIP):\n",
-                "    print(f'Found {COCO_ZIP}, unzipping (~5-10 min)...')\n",
-                "    !unzip -qo {COCO_ZIP} -d /tmp/coco_unzip/\n",
-                "    \n",
-                "    # Copy needed folders (coco.zip has coco2017/ subfolder inside)\n",
-                "    !cp -r /tmp/coco_unzip/coco2017/annotations/* data/coco/annotations/\n",
-                "    !cp -r /tmp/coco_unzip/coco2017/train2017/* data/coco/train2017/\n",
-                "    \n",
-                "    # Clean up temp files to save disk space\n",
-                "    !rm -rf /tmp/coco_unzip\n",
-                "    \n",
-                "    print(f'✅ COCO train images: {len(os.listdir(\"data/coco/train2017\"))}')\n",
-                "    print(f'   Annotations: {os.listdir(\"data/coco/annotations\")}')\n",
+                "# Step 1: Extract to Drive if not already done\n",
+                "marker = os.path.join(COCO_DRIVE_DIR, '.extraction_complete')\n",
+                "if os.path.exists(marker):\n",
+                "    print('✅ COCO already extracted on Drive. Skipping extraction.')\n",
+                "elif os.path.exists(COCO_ZIP):\n",
+                "    print(f'📦 Extracting COCO to Google Drive (one-time, ~15-20 min)...')\n",
+                "    start = time.time()\n",
+                "    os.makedirs(COCO_DRIVE_DIR, exist_ok=True)\n",
+                "    # Extract directly to Drive (coco.zip contains coco2017/ folder)\n",
+                "    !unzip -qo {COCO_ZIP} -d /content/drive/MyDrive/datasets/\n",
+                "    # Create marker file to skip extraction next time\n",
+                "    with open(marker, 'w') as f:\n",
+                "        f.write('done')\n",
+                "    elapsed = time.time() - start\n",
+                "    print(f'✅ Extraction complete in {elapsed/60:.1f} min')\n",
                 "else:\n",
                 "    print(f'❌ COCO zip not found at {COCO_ZIP}')\n",
                 "    print(f'   Upload coco.zip to Google Drive at: MyDrive/datasets/coco.zip')\n",
-                "    print(f'   Or change COCO_ZIP path above to match your Drive location.')"
+                "\n",
+                "# Step 2: Symlink Drive folders into project data/coco/\n",
+                "import shutil\n",
+                "\n",
+                "# Remove empty dirs and replace with symlinks\n",
+                "for folder in ['annotations', 'train2017']:\n",
+                "    src = os.path.join(COCO_DRIVE_DIR, folder)\n",
+                "    dst = os.path.join(REPO_DIR, 'data', 'coco', folder)\n",
+                "    if os.path.islink(dst):\n",
+                "        os.unlink(dst)\n",
+                "    elif os.path.isdir(dst):\n",
+                "        shutil.rmtree(dst)\n",
+                "    if os.path.exists(src):\n",
+                "        os.symlink(src, dst)\n",
+                "        print(f'  🔗 {dst} → {src}')\n",
+                "    else:\n",
+                "        print(f'  ⚠️  {src} not found on Drive!')\n",
+                "\n",
+                "# Verify\n",
+                "train_dir = 'data/coco/train2017'\n",
+                "ann_dir = 'data/coco/annotations'\n",
+                "if os.path.exists(train_dir):\n",
+                "    print(f'\\n✅ COCO train images: {len(os.listdir(train_dir)):,}')\n",
+                "if os.path.exists(ann_dir):\n",
+                "    print(f'   Annotations: {os.listdir(ann_dir)}')"
             ]
         },
         {
@@ -712,7 +741,8 @@
                 "- **Full COCO**: Set `USE_SUBSET = False` in cell 7b\n",
                 "- **Resume training**: Set `resume_from = 'work_dir/epoch_X.pth'` in config\n",
                 "- **Fine-tune from pretrained**: Set `load_from = 'Checkpoints/Checkpoint1.pth'`\n",
-                "- Only the best model (by bbox mAP) is saved to Google Drive — no wasted disk space!"
+                "- Only the best model (by bbox mAP) is saved to Google Drive — no wasted disk space!\n",
+                "- COCO is extracted once to Drive and symlinked on future runs — instant setup!"
             ]
         }
     ],
